[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "langchain-graph-store-agensgraph"
version = "0.1.0"
description = "AgensGraph integration for LangChain graph stores"
authors = ["Muhammad Taha Naveed <skaisw@skaiworldwide.com>"]
readme = "README.md"
homepage = "https://github.com/skaiworldwide-oss/agensgraph-ai/tree/main/langchain"
repository = "https://github.com/skaiworldwide-oss/agensgraph-ai/tree/main/langchain"
keywords = ["langchain", "agensgraph", "graph store", "integration"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
psycopg2 = "^2.9.10"
langchain-core = ">=0.3.34,<1.0.0"
langchain = ">=0.3.18,<1.0.0"
langchain-community = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
ipython = "8.10.0"
jupyter = "^1.0.0"
mypy = "0.991"
pre-commit = "3.2.0"
pylint = "2.15.10"
pytest = "7.2.1"
pytest-mock = "3.11.1"
ruff = "0.0.292"
tree-sitter-languages = "^1.8.0"
types-Deprecated = ">=0.1.0"
types-PyYAML = "^6.0.12.12"
types-protobuf = "^4.24.0.4"
types-redis = "4.5.5.0"
types-requests = "2.28.11.8"
types-setuptools = "67.1.0.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies.black]
extras = ["jupyter"]
version = "<=23.9.1,>=23.7.0"

[tool.poetry.group.dev.dependencies.codespell]
extras = ["toml"]
version = ">=v2.2.6"

[[tool.poetry.packages]]
include = "langchain/"
