[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry]
name = "lightrag_agensgraph"
version = "0.1.0"
description = "Lightrag graph store implementation for agensgraph"
authors = ["Muhammad Taha Naveed <skaisw@skaiworldwide.com>"]
readme = "README.md"
homepage = "https://github.com/skaiworldwide-oss/agensgraph-ai/tree/main/lightrag"
repository = "https://github.com/skaiworldwide-oss/agensgraph-ai/tree/main/lightrag"
keywords = ["lightrag", "agensgraph", "graph store", "integration"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
psycopg = { version = ">=3.1.0", extras = ["binary"] }
asyncpg = ">=0.28.0"
lightrag-hku = ">=1.3.9"

[[tool.poetry.packages]]
include = "lightrag_agensgraph"
