[project]
name = "mcp-agensgraph-memory"
version = "0.1.0"
description = "MCP AgensGraph Knowledge Graph Memory Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "psycopg[binary,pool]>=3.2.9,<4.0.0",
    "psycopg-pool>=3.2.6,<4.0.0",
    "pydantic>=2.10.1",
    "starlette>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "aiohttp>=3.8.0",
    "ruff>=0.11.5"
]

[project.scripts]
mcp-agensgraph-memory = "mcp_agensgraph_memory:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "database: marks tests that require an AgensGraph database connection"
]
